--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -220,6 +220,9 @@
                                 ></canvas>
                             </div>
                             <div class="invoice-links-wrapper">
+                                <div class="invoice-header">
+                                    Billing History
+                                </div>
                                 <div class="invoice-item">
                                     <div class="time-frame f-l">
                                         <a href="#">March 1 - March 7</a>
@@ -288,82 +291,78 @@
                                     </div>
                                 </div>
                                 <div class="order tile1">
-                                    <div class="odd">
-                                        <div class="f-l dish-name">
-                                            <input
-                                                type="text"
-                                                class="f-input-small show-only"
-                                                value="North Indian Veg"
-                                                readonly
-                                            />
-                                            <p>20/3/2021 - Lunch</p>
-                                        </div>
-                                        <div class="f-l quantity">
-                                            <input
-                                                type="text"
-                                                class="f-input-small show-only"
-                                                value="20 Meals"
-                                                readonly
-                                            />
-                                        </div>
-                                        <div class="f-l action-wrap">
-                                            <button
-                                                class="small-button edit-order-meals success"
-                                            >
-                                                <span
-                                                    class="glyphicon glyphicon-edit"
-                                                ></span>
-                                            </button>
-                                            <button
-                                                class="small-button delete-order-meals failure"
-                                            >
-                                                <span
-                                                    class="glyphicon glyphicon-trash"
-                                                ></span>
-                                            </button>
-                                        </div>
-                                        <div class="clr"></div>
+                                    <div class="f-l dish-name">
+                                        <input
+                                            type="text"
+                                            class="f-input-small show-only"
+                                            value="North Indian Veg"
+                                            readonly
+                                        />
+                                        <p>20/3/2021 - Lunch</p>
                                     </div>
+                                    <div class="f-l quantity">
+                                        <input
+                                            type="text"
+                                            class="f-input-small show-only"
+                                            value="20 Meals"
+                                            readonly
+                                        />
+                                    </div>
+                                    <div class="f-l action-wrap">
+                                        <button
+                                            class="small-button edit-order-meals success"
+                                        >
+                                            <span
+                                                class="glyphicon glyphicon-edit"
+                                            ></span>
+                                        </button>
+                                        <button
+                                            class="small-button delete-order-meals failure"
+                                        >
+                                            <span
+                                                class="glyphicon glyphicon-trash"
+                                            ></span>
+                                        </button>
+                                    </div>
+                                    <div class="clr"></div>
 
                                     <div class="clr"></div>
                                 </div>
                                 <div class="order tile2">
-                                    <div class="even">
-                                        <div class="f-l dish-name">
-                                            <input
-                                                type="text"
-                                                class="f-input-small show-only"
-                                                value="North Indian Veg"
-                                                readonly
-                                            />
-                                            <p>20/3/2021 - Lunch</p>
-                                        </div>
-                                        <div class="f-l quantity">
-                                            <input
-                                                type="text"
-                                                class="f-input-small show-only"
-                                                value="20 Meals"
-                                                readonly
-                                            />
-                                        </div>
-                                        <div class="f-l action-wrap">
-                                            <button
-                                                class="small-button edit-order-meals success"
-                                            >
-                                                <span
-                                                    class="glyphicon glyphicon-edit"
-                                                ></span>
-                                            </button>
-                                            <button
-                                                class="small-button delete-order-meals failure"
-                                            >
-                                                <span
-                                                    class="glyphicon glyphicon-trash"
-                                                ></span>
-                                            </button>
-                                        </div>
-                                        <div class="clr"></div>
+                                    <div class="f-l dish-name">
+                                        <input
+                                            type="text"
+                                            class="f-input-small show-only"
+                                            value="North Indian Veg"
+                                            readonly
+                                        />
+                                        <p>20/3/2021 - Lunch</p>
                                     </div>
+                                    <div class="f-l quantity">
+                                        <input
+                                            type="text"
+                                            class="f-input-small show-only"
+                                            value="20 Meals"
+                                            readonly
+                                        />
+                                    </div>
+                                    <div class="f-l action-wrap">
+                                        <button
+                                            class="small-button edit-order-meals success"
+                                        >
+                                            <span
+                                                class="glyphicon glyphicon-edit"
+                                            ></span>
+                                        </button>
+                                        <button
+                                            class="small-button delete-order-meals failure"
+                                        >
+                                            <span
+                                                class="glyphicon glyphicon-trash"
+                                            ></span>
+                                        </button>
+                                    </div>
+                                    <div class="clr"></div>
                                     <div class="clr"></div>
                                 </div>
                                 <div class="clr"></div>
@@ -428,24 +427,24 @@
                         </div>
                         <div class="approve-wrap">
                             <div class="approve-header">
+                                <div class="item-ch f-l">
+                                    <input type="checkbox" />
+                                </div>
                                 <div class="item f-l">Name</div>
                                 <div class="item f-l">Email</div>
                                 <div class="item f-l">Phone</div>
                                 <div class="item f-l">Office</div>
-                                <div class="item-ch f-l">
-                                    <input type="checkbox" />
-                                </div>
                                 <div class="item-bt f-l"></div>
                                 <div class="clr"></div>
                             </div>
                             <div class="approve-item">
-                                <div class="item f-l">Test</div>
-                                <div class="item f-l">Test</div>
-                                <div class="item f-l">Test</div>
-                                <div class="item f-l">Test</div>
                                 <div class="item-ch f-l">
                                     <input type="checkbox" />
                                 </div>
+                                <div class="item f-l">Test</div>
+                                <div class="item f-l">Test</div>
+                                <div class="item f-l">Test</div>
+                                <div class="item f-l">Test</div>
                                 <div class="item-bt f-l">
                                     <button
                                         class="small-button approve-user-button"
@@ -459,7 +458,7 @@
                                 <div class="clr"></div>
                             </div>
                         </div>
-                        <div class="action-wrap-app">
+                        <div class="action-wrap-app hidden">
                             <button class="small-button approve-all-users">
                                 Approve All
                             </button>
