--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -213,11 +213,7 @@
                                 <div class="clr"></div>
                             </div>
                             <div class="chart-container">
-                                <canvas
-                                    id="billingChart"
-                                    width="400"
-                                    height="400"
-                                ></canvas>
+                                <canvas id="billingChart"></canvas>
                             </div>
                             <div class="invoice-links-wrapper">
                                 <div class="invoice-header">
