--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -201,19 +201,19 @@
                     <div class="dashboard-step-2 d-s analytics-wrap">
                         <div class="analytics-main-wrap">
                             <div class="analytics-tiles-wrap">
-                                <div class="tile-an f-l">
+                                <div class="tile-an f-l color-one">
                                     <h3>12000 Lunch</h3>
                                     <p>last month</p>
                                 </div>
-                                <div class="tile-an f-l">
+                                <div class="tile-an f-l color-two">
                                     <h3>2 Lakh</h3>
                                     <p>last invoice</p>
                                 </div>
-                                <div class="tile-an f-l">
+                                <div class="tile-an f-l color-three">
                                     <h3>1.5 Lakh</h3>
                                     <p>month till date</p>
                                 </div>
-                                <div class="tile-an f-l">
+                                <div class="tile-an f-l color-four">
                                     <h3>200 Meals</h3>
                                     <p>today</p>
                                 </div>
