--- a/getStarted.html
+++ b/getStarted.html
@@ -9,6 +9,7 @@
         />
         <link rel="stylesheet" href="./css/index.css" type="text/css" />
         <link rel="stylesheet" href="./css/common.css" type="text/css" />
+        <link rel="stylesheet" href="./css/getStarted.css" type="text/css" />
         <link
             rel="icon"
             href="./images/favicon.jpeg"
@@ -53,15 +54,15 @@
                         what you would like to eat.
                     </p>
                     <div class="action-wrap">
-                        <button>Start Now</button>
+                        <button class="med-button">Start Now</button>
                     </div>
                 </div>
             </div>
         </section>
         <footer>
-            <div class="footer-main-wrap">
-                <div class="footer-in">
-                    <img src="" class="img img-responsive" />
+            <div class="footer-main-wrap gs">
+                <div class="footer-inn">
+                    <img src="./images/footer-image-gs.png" class="img img-responsive" />
                 </div>
         </footer>
     </body>
