get started page css

--- a/getStartedSteps.html
+++ b/getStartedSteps.html
@@ -9,6 +9,8 @@
         />
         <link rel="stylesheet" href="./css/index.css" type="text/css" />
         <link rel="stylesheet" href="./css/common.css" type="text/css" />
+        <link rel="stylesheet" href="./css/getStarted.css" type="text/css" />
+        <link rel="stylesheet" href="./css/backgroundImage.css" type="text/css" />
         <link
             rel="icon"
             href="./images/favicon.jpeg"
@@ -41,9 +43,9 @@
         </header>
         <section>
             <div class="container container-steps-in">
-                <div class="row container-steps-wrap">
+                <div class=" container-steps-wrap">
                     <div class="menu-building-wrapper">
-                        <div class="menu-building-options">
+                        <div class="menu-building-options active">
                             <div class="step-count">
                                 <p>1/7</p>
                             </div>
@@ -55,10 +57,10 @@
                             </div>
                             <div class="step-actions">
                                 <div class="actions">
-                                    <a href="#">Non-Vegeterian</a>
+                                    <button class="non-veg-button">Non-Vegeterian</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">Vegeterian</a>
+                                    <button class="veg-button">Vegeterian</button>
                                 </div>
                             </div>
                         </div>
@@ -74,16 +76,16 @@
                             </div>
                             <div class="step-actions">
                                 <div class="actions">
-                                    <a href="#">Breakfast</a>
+                                    <button class="breakfast-button">Breakfast</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">Lunch</a>
+                                    <button class="lunch-button">Lunch</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">Snacks</a>
+                                    <button class="snacks-button">Snacks</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">Dinner</a>
+                                    <button class="dinner-button">Dinner</button>
                                 </div>
                             </div>
                         </div>
@@ -100,12 +102,11 @@
                             </div>
                             <div class="step-actions">
                                 <div class="actions">
-                                    <a href="#">Yes</a>
+                                    <button class="freq-skip">Yes</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">No, Eat Everyday</a>
+                                    <button class="freq-skip-no">No, Eat Everyday</button>
                                 </div>
-                                
                             </div>
                         </div>
                         <div class="menu-building-options">
@@ -120,27 +121,26 @@
                             </div>
                             <div class="step-actions">
                                 <div class="actions">
-                                    <a href="#">Sunday</a>
+                                    <button class="sunday">Sunday</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">Monday</a>
+                                    <button class="monday">Monday</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">Tuesday</a>
+                                    <button class="tuesday">Tuesday</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">Wednesday</a>
+                                    <button class="wednesday">Wednesday</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">Thursday</a>
+                                    <button class="thursday">Thursday</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">Friday</a>
+                                    <button class="friday">Friday</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">Saturday</a>
+                                    <button class="saturday">Saturday</button>
                                 </div>
-                                
                             </div>
                         </div>
                         <div class="menu-building-options">
@@ -155,25 +155,49 @@
                             </div>
                             <div class="step-actions">
                                 <div class="actions">
-                                    <a href="#">North Indian</a>
+                                    <button class="northindian">North Indian</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">South Indian</a>
+                                    <button class="southindian">South Indian</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">Bengali</a>
+                                    <button class="bengali">Bengali</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">Jain</a>
+                                    <button class="jain">Jain</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">Chinese</a>
+                                    <button class="chinese">Chinese</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">Healthy</a>
+                                    <button class="healthy">Healthy</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">Keto</a>
+                                    <button class="keto">Keto</button>
+                                </div>
+                                <div class="actions">
+                                    <button class="marathi">Marathi</button>
+                                </div>
+                                <div class="actions">
+                                    <button class="malayali">Malayali</button>
+                                </div>
+                                <div class="actions">
+                                    <button class="andhra">Andhra</button>
+                                </div>
+                                <div class="actions">
+                                    <button class="odia">Odia</button>
+                                </div>
+                                <div class="actions">
+                                    <button class="tamil">Tamil</button>
+                                </div>
+                                <div class="actions">
+                                    <button class="rajasthani">Rajasthani</button>
+                                </div>
+                                <div class="actions">
+                                    <button class="gujarati">Gujarati</button>
+                                </div>
+                                <div class="actions">
+                                    <button class="nutritionist">Nutritionist</button>
                                 </div>
                             </div>
                         </div>
@@ -189,38 +213,38 @@
                             </div>
                             <div class="step-actions">
                                 <div class="actions">
-                                    <a href="#">Mini</a>
+                                    <button class="mini">Mini</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">Standard</a>
+                                    <button class="standard">Standard</button>
                                 </div>
                                 <div class="actions">
-                                    <a href="#">Extra</a>
+                                    <button class="extra">Extra</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="step-par-actions">
                         <div class="prev">
-                            <a href="#">Previous</a>
+                            <a href="#"></a>
                         </div>
                         <div class="next">
-                            <a href="#">Next</a>
+                            <a href="#"></a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <footer>
-            <div class="footer-main-wrap">
+            <div class="footer-main-wrap steps">
                 <div class="footer-steps-wrap">
-                    <div class="step step-1"></div>
-                    <div class="step step-1"></div>
-                    <div class="step step-1"></div>
-                    <div class="step step-1"></div>
-                    <div class="step step-1"></div>
-                    <div class="step step-1"></div>
-                    <div class="step step-1"></div>
+                    <div class="step step-1 step-done"></div>
+                    <div class="step step-2"></div>
+                    <div class="step step-3"></div>
+                    <div class="step step-4"></div>
+                    <div class="step step-5"></div>
+                    <div class="step step-6"></div>
+                    <div class="step step-7"></div>
                 </div>
         </footer>
     </body>
