--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 	    	</tr>
 	    	<tr>
 	    		<td colspan="2">
-    				<p>Please open this page on your mobile phone and keep your GPS on. Click "<b>Get My Coordinates</b>" button to get your map coordinates. <br><br>Enter your name and mobile number and click submit. This will help us reduce calls to you for deliveries.<br></p>
+    				<p>Please open this page on your mobile phone and keep your GPS on. <br><br>
+    					<b>Step 1.</b> Click "<b>Get My Coordinates</b>" button to get your map coordinates. <br><br>
+    					<b>Step 2.</b> Enter your name and mobile number and click "<b>Submit</b>". 
+    				</p>
     			</td>
     		</tr>
     		<tr>
