steps get started javascript changes

--- a/getStartedSteps.html
+++ b/getStartedSteps.html
@@ -21,6 +21,7 @@
         <script type="text/javascript" src="./vendor/js/popper.js"></script>
         <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
         <script type="text/javascript" src="./js/homePage.js"></script>
+        <script type="text/javascript" src="./js/getStartedSteps.js"></script>
     </head>
     <body>
         <header>
@@ -226,10 +227,10 @@
                     </div>
                     <div class="step-par-actions">
                         <div class="prev">
-                            <a href="#"></a>
+                            <a href="javascript:void(0);"></a>
                         </div>
                         <div class="next">
-                            <a href="#"></a>
+                            <a href="javascript:void(0);"></a>
                         </div>
                     </div>
                 </div>
