meal object creation and js tasks

--- a/getStartedSteps.html
+++ b/getStartedSteps.html
@@ -58,10 +58,10 @@
                             </div>
                             <div class="step-actions">
                                 <div class="actions">
-                                    <button class="non-veg-button">Non-Vegeterian</button>
+                                    <button class="non-veg-button step-btn-slide" data-info='{"mealCategory":"nonveg"}'>Non-Vegeterian</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="veg-button">Vegeterian</button>
+                                    <button class="veg-button step-btn-slide" data-info='{"mealCategory":"veg"}'>Vegeterian</button>
                                 </div>
                             </div>
                         </div>
@@ -77,16 +77,16 @@
                             </div>
                             <div class="step-actions">
                                 <div class="actions">
-                                    <button class="breakfast-button">Breakfast</button>
+                                    <button class="breakfast-button step-btn-meal-subs" data-mealsubs="breakfast">Breakfast</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="lunch-button">Lunch</button>
+                                    <button class="lunch-button step-btn-meal-subs" data-mealsubs="lunch">Lunch</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="snacks-button">Snacks</button>
+                                    <button class="snacks-button step-btn-meal-subs" data-mealsubs="snacks">Snacks</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="dinner-button">Dinner</button>
+                                    <button class="dinner-button step-btn-meal-subs" data-mealsubs="dinner">Dinner</button>
                                 </div>
                             </div>
                         </div>
@@ -103,10 +103,10 @@
                             </div>
                             <div class="step-actions">
                                 <div class="actions">
-                                    <button class="freq-skip">Yes</button>
+                                    <button class="freq-skip step-btn-slide" data-info='{"skipNonVeg":true}'>Yes</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="freq-skip-no">No, Eat Everyday</button>
+                                    <button class="freq-skip-no step-btn-slide" data-info='{"skipNonVeg":false}'>No, Eat Everyday</button>
                                 </div>
                             </div>
                         </div>
@@ -122,25 +122,25 @@
                             </div>
                             <div class="step-actions">
                                 <div class="actions">
-                                    <button class="sunday">Sunday</button>
+                                    <button class="sunday slide-skip-nv" data-skipDay="sunday">Sunday</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="monday">Monday</button>
+                                    <button class="monday slide-skip-nv" data-skipDay="monday">Monday</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="tuesday">Tuesday</button>
+                                    <button class="tuesday slide-skip-nv" data-skipDay="tuesday">Tuesday</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="wednesday">Wednesday</button>
+                                    <button class="wednesday slide-skip-nv" data-skipDay="wednesday">Wednesday</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="thursday">Thursday</button>
+                                    <button class="thursday slide-skip-nv" data-skipDay="thursday">Thursday</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="friday">Friday</button>
+                                    <button class="friday slide-skip-nv" data-skipDay="friday">Friday</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="saturday">Saturday</button>
+                                    <button class="saturday slide-skip-nv" data-skipDay="saturday">Saturday</button>
                                 </div>
                             </div>
                         </div>
@@ -156,49 +156,49 @@
                             </div>
                             <div class="step-actions">
                                 <div class="actions">
-                                    <button class="northindian">North Indian</button>
+                                    <button class="northindian slide-cuisine" data-cuisine="northindian">North Indian</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="southindian">South Indian</button>
+                                    <button class="southindian slide-cuisine" data-cuisine="southindian">South Indian</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="bengali">Bengali</button>
+                                    <button class="bengali slide-cuisine" data-cuisine="bengali">Bengali</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="jain">Jain</button>
+                                    <button class="jain slide-cuisine" data-cuisine="jain">Jain</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="chinese">Chinese</button>
+                                    <button class="chinese slide-cuisine" data-cuisine="chinese">Chinese</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="healthy">Healthy</button>
+                                    <button class="healthy slide-cuisine" data-cuisine="healthy">Healthy</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="keto">Keto</button>
+                                    <button class="keto slide-cuisine" data-cuisine="keto">Keto</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="marathi">Marathi</button>
+                                    <button class="marathi slide-cuisine" data-cuisine="marathi">Marathi</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="malayali">Malayali</button>
+                                    <button class="malayali slide-cuisine" data-cuisine="malayali">Malayali</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="andhra">Andhra</button>
+                                    <button class="andhra slide-cuisine" data-cuisine="andhra">Andhra</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="odia">Odia</button>
+                                    <button class="odia slide-cuisine" data-cuisine="odia">Odia</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="tamil">Tamil</button>
+                                    <button class="tamil slide-cuisine" data-cuisine="tamil">Tamil</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="rajasthani">Rajasthani</button>
+                                    <button class="rajasthani slide-cuisine" data-cuisine="rajasthani">Rajasthani</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="gujarati">Gujarati</button>
+                                    <button class="gujarati slide-cuisine" data-cuisine="gujarati">Gujarati</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="nutritionist">Nutritionist</button>
+                                    <button class="nutritionist slide-cuisine" data-cuisine="nutritionist">Nutritionist</button>
                                 </div>
                             </div>
                         </div>
@@ -214,13 +214,13 @@
                             </div>
                             <div class="step-actions">
                                 <div class="actions">
-                                    <button class="mini">Mini</button>
+                                    <button class="mini step-btn-slide" data-info='{"potionSize":"mini"}'>Mini</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="standard">Standard</button>
+                                    <button class="standard step-btn-slide" data-info='{"potionSize":"standard"}'>Standard</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="extra">Extra</button>
+                                    <button class="extra step-btn-slide" data-info='{"potionSize":"extra"}'>Extra</button>
                                 </div>
                             </div>
                         </div>
